name:          scotty-hello
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          scotty-hello
    hs-source-dirs: src
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base
                  , scotty
                  , aeson
                  , text
                  , time
                  , http-types
                  , bytestring
                  , mtl
                  , wai
                  , wai-extra
                  , wai-middleware-static
                  , warp
                  , blaze-html
                  , resourcet
                  , data-default
                  , heroku
                  , transformers
                  , monad-logger
                  , persistent
                  , persistent-template
                  , persistent-sqlite
                  , persistent-postgresql
                  , monad-logger
